chore: consolidated types to account for cyclical dependency
